--- a/src/Components/Tag/style/tag.module.scss
+++ b/src/Components/Tag/style/tag.module.scss
@@ -1,6 +1,3 @@
-:global() {
-}
-
 .tag {
   display: inline-flex;
   justify-content: center;
@@ -12,7 +9,7 @@
   font-size: 1.2rem;
   line-height: 2rem;
   list-style: none;
-  margin-inline-end: 8px;
+  // margin-inline-end: 8px;
   padding-inline: 7px;
   white-space: nowrap;
   border: var(--tag-border);
